--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body{
   margin: 35px auto;
   width: 70%;
+  max-width: 1920px;
 }
 
 .title{
@@ -26,7 +27,6 @@ display: inline-block;
   font-family: 'Quicksand', sans-serif;
   font-size: 8pt;
   margin: 0;
-
 }
 
 .top-icons{
@@ -81,15 +81,15 @@ h1{
   background-size: cover;
   width: 100%;
   height: 400px;
-
+  overflow: scroll;
 }
+
 .notes{
   margin: 20px auto;
 }
 
 ul {
     list-style-image: url('images/li-img.png');
-
 }
 
 li{
@@ -123,14 +123,15 @@ li{
 .share-button{
   float: right;
   position: relative;
-top: -54px;
-}
-
-footer{
-  display: inline;
+  top: -54px;
 }
 
 .footer-content{
   width: 100%;
-    margin: 0 auto;
+  margin: 0 auto !important;
+  overflow: hidden;
+}
+
+.forkKnife{
+  width: 100%;
 }
